--- a/public/index.css
+++ b/public/index.css
@@ -30,13 +30,7 @@ body {
   font-weight: 600;
 }
 
-/* #work {
-  position: absolute;
-  top: 30px;
+a {
+  text-decoration: none;
+  color: black;
 }
-
-#home {
-  position:absolute;
-  top: 30px; right : 10px;
-  
-} */
